Fix a margins on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ p, li {
         margin: 20px 10px;
     }
 
-    p, li, a {
+    p, li {
         font-size: 12px;
         margin: 10px 10px;
     }
